# argonaut-hs

./: .gitignore  .travis.yml  CHANGELOG.md  README.md  argonaut.cabal  bower.json  gulpfile.js  package-lock.json  package.json  packages.dhall  spago.dhall
.github/: CONTRIBUTING.md  contributing.md  issue_template.md
benchmark/: Benchmark.hs  MainBenchmarkSuite.hs
docs/: README.md
docs/Data/: Argonaut.md
docs/Data/Argonaut/: Core.md  Decode.md  JCursor.md
examples/Examples/Data/Argonaut/: Record.purs
src/Data/: Argonaut.hs  Argonaut.purs  README.md
src/Data/Argonaut/: Combinators.purs  Core.hs  Core.purs  Decode.hs  Decode.purs  Encode.hs  Encode.purs  JCursor.js  JCursor.purs  Lenses.hs  Parser.hs  Parser.purs  Printer.hs  Printer.purs  README.md  Templates.hs
test/Data/: Argonaut.purs
test/Data/Argonaut/: CoreSpec.hs  EncodeDecodeSpec.hs  ParserSpec.hs  TestInstances.hs  TestTemplates.hs
test/Data/Argonaut/Parser/: Spec.hs
test/Test/: Main.purs
