name: argonaut
version: 0.1
cabal-version: >=1.18
build-type: Simple
license: BSD3
license-file: ""
copyright: (c) 2013 Sean Parsons
           (c) 2013 Mark Hibberd
           (c) 2013 Tony Morris
maintainer: Sean Parsons
            Mark Hibberd
            Tony Morris
stability: experimental
homepage: https://github.com/argonaut-io/argonaut-hs
bug-reports: https://github.com/argonaut-io/argonaut-hs/issues
synopsis: Fast and powerful JSON manipulation
description: JSON library of justice.
category: Text, JSON
author: Sean Parsons
        Mark Hibberd
        Tony Morris
data-dir: ""
extra-source-files: README.md benchmark/*.cabal benchmark/*.hs
                    benchmark/json-data/*.json

library
    build-depends:                  base ==4.*,
                                    unordered-containers >=0.2.2.3,
                                    vector >=0.10.9.1,
                                    lens >=3.10,
                                    mtl >=2.1.2
    exposed-modules: Data.Argonaut
                     Data.Argonaut.Parser
    exposed: True
    buildable: True
    default-language: Haskell2010
    default-extensions: TemplateHaskell
    hs-source-dirs: src/

test-suite tests
    build-depends:                  base ==4.*,
                                    unordered-containers >=0.2.2.3,
                                    vector >=0.10.9.1,
                                    lens >=3.10,
                                    mtl >=2.1.2,
                                    QuickCheck -any,
                                    hspec -any
    ghc-options:                    -rtsopts
    type: exitcode-stdio-1.0
    main-is: Spec.hs
    buildable: True
    default-language: Haskell2010
    hs-source-dirs: src/ test/
