name:                               argonaut
version:                            0.2
cabal-version:                      >=1.18
build-type:                         Simple
license:                            BSD3
copyright:                          (c) 2013 Sean Parsons
                                    (c) 2013 Mark Hibberd
                                    (c) 2013 Tony Morris
maintainer:                         Sean Parsons
                                    Mark Hibberd
                                    Tony Morris
stability:                          experimental
homepage:                           https://github.com/argonaut-io/argonaut-hs
bug-reports:                        https://github.com/argonaut-io/argonaut-hs/issues
synopsis:                           Fast and powerful JSON manipulation
description:                        JSON library of justice.
category:                           Text, JSON
author:                             Sean Parsons
                                    Mark Hibberd
                                    Tony Morris
extra-source-files:                 README.md
                                    benchmark/*.cabal
                                    benchmark/*.hs
                                    benchmark/json-data/*.json

library
    build-depends:                  base ==4.*,
                                    unordered-containers >=0.2.2.3,
                                    vector >=0.10.9.1,
                                    lens >=3.10,
                                    mtl >=2.1.2,
                                    text >= 0.11.3.1,
                                    template-haskell >= 2.8.0.0,
                                    bytestring >= 0.10.4.0,
                                    hashable >= 1.2.1.0,
                                    scientific >= 0.2.0.2
    ghc-options:                    -rtsopts
                                    -Wall
                                    -O2
    exposed-modules:                Data.Argonaut
                                    Data.Argonaut.Parser
                                    Data.Argonaut.Encode
                                    Data.Argonaut.Decode
    exposed:                        True
    buildable:                      True
    default-language:               Haskell2010
    default-extensions:             TemplateHaskell
    hs-source-dirs:                 src

test-suite tests
    build-depends:                  base ==4.*,
                                    unordered-containers >=0.2.2.3,
                                    vector >=0.10.9.1,
                                    lens >=3.10,
                                    mtl >=2.1.2,
                                    text >= 0.11.3.1,
                                    template-haskell >= 2.8.0.0,
                                    hashable >= 1.2.1.0,
                                    bytestring >= 0.10.4.0,
                                    scientific >= 0.2.0.2,
                                    argonaut,
                                    QuickCheck -any,
                                    hspec -any
    ghc-options:                    -rtsopts
                                    -Wall
                                    -O2
                                    -threaded
    type:                           exitcode-stdio-1.0
    main-is:                        Spec.hs
    buildable:                      True
    default-language:               Haskell2010
    default-extensions:             TemplateHaskell
    hs-source-dirs:                 test

benchmark argonaut-bench
    type:                           exitcode-stdio-1.0
    hs-source-dirs:                 benchmark
    buildable:                      True
    default-language:               Haskell2010
    default-extensions:             TemplateHaskell
    main-is:                        MainBenchmarkSuite.hs
    build-depends:                  base ==4.*,
                                    unordered-containers >=0.2.2.3,
                                    vector >=0.10.9.1,
                                    lens >=3.10,
                                    mtl >=2.1.2,
                                    criterion >= 0.8.0.0,
                                    directory >= 1.2.0.1,
                                    aeson >= 0.7.0.2,
                                    text >= 0.11.3.1,
                                    template-haskell >= 2.8.0.0,
                                    hashable >= 1.2.1.0,
                                    bytestring >= 0.10.4.0,
                                    scientific >= 0.2.0.2,
                                    attoparsec >= 0.10.4.0,
                                    argonaut
    ghc-options:                    -rtsopts
                                    -Wall
                                    -O2